[package]
name = "discord"
version = "0.1.0"
edition = "2024"
authors = ["xctions"]
description = "Discord notification tools"
repository = "https://github.com/xctions/notification"
license = "MIT"

[lib]
name = "discord"
path = "src/lib.rs"

[[bin]]
name = "push-commit"
path = "src/bin/push_commit.rs"

[[bin]]
name = "pr-merged"
path = "src/bin/pr_merged.rs"

[[bin]]
name = "pr-opened"
path = "src/bin/pr_opened.rs"

[dependencies]
serenity = "0.12.4"
tokio = { version = "1.39.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
discord-message-template = { git = "https://github.com/xctions/discord-message-template", tag = "v0.0.2" }
dotenvy = "0.15"

[dev-dependencies]
pretty_env_logger = "0.4.0"



